Update Docker file to point to local clone

--- a/nodered/Dockerfile
+++ b/nodered/Dockerfile
@@ -21,5 +21,6 @@ RUN npm install node-red-contrib-dsm
 RUN npm install node-red-contrib-influxdb
 RUN npm install node-red-contrib-modbus
 RUN npm install node-red-contrib-stackhero-influxdb-v2
-RUN npm install node-red-contrib-sun-position
-RUN npm install git://github.com/jsloane/node-red-solaredge-modbus-client.git#se-power-meter
+#RUN npm install node-red-contrib-sun-position
+#RUN npm install git://github.com/jsloane/node-red-solaredge-modbus-client.git#se-power-meter
+RUN npm install git://github.com/rabecaps/node-red-solaredge-modbus-client.git#se-power-meter 
